[gd_scene load_steps=27 format=3 uid="uid://rsgbc50dyqjq"]

[ext_resource type="Texture2D" uid="uid://otrpjwobuq48" path="res://art/bossman.png" id="1_7j0j7"]
[ext_resource type="Script" uid="uid://brwbr5km8tnx5" path="res://scenes/bossman/bossman.gd" id="1_ynbah"]
[ext_resource type="Script" uid="uid://qa3hxqlimdga" path="res://scenes/common/entity/sprite_rotating_with_face_direction.gd" id="3_8hjgk"]
[ext_resource type="Script" uid="uid://c1p2k4gnmsd5i" path="res://scenes/common/states/state_manager.gd" id="4_lu0pf"]
[ext_resource type="Script" uid="uid://1nq02upahbrq" path="res://scenes/bossman/states/throne/sat.gd" id="5_byj66"]
[ext_resource type="Script" uid="uid://bsej086u63lhp" path="res://scenes/bossman/states/idle.gd" id="5_y5brg"]
[ext_resource type="Script" uid="uid://fc02nao47qb3" path="res://scenes/bossman/states/throne/unsit.gd" id="6_vw84s"]
[ext_resource type="Script" uid="uid://d1ajfcjn4i0rq" path="res://scenes/bossman/states/move.gd" id="6_ynbah"]
[ext_resource type="Script" uid="uid://hpgl7ii1ngh1" path="res://scenes/bossman/states/jump.gd" id="8_640y7"]
[ext_resource type="Script" uid="uid://cw3yvvengfoal" path="res://scenes/common/input_buffer.gd" id="8_lu0pf"]
[ext_resource type="Script" uid="uid://chmr1wpu3v2lj" path="res://scenes/bossman/states/air.gd" id="9_bfm6t"]
[ext_resource type="Script" uid="uid://bhbv0ejgyxibk" path="res://scenes/bossman/states/air_stomp.gd" id="10_1or6h"]
[ext_resource type="Script" uid="uid://b2fu5diq2yf2j" path="res://scenes/bossman/states/wall_jump.gd" id="11_5akeu"]
[ext_resource type="Script" uid="uid://dt02x1s3ag6m" path="res://scenes/bossman/states/wall_slide.gd" id="12_8hjgk"]
[ext_resource type="Script" uid="uid://c7jslcn6hw145" path="res://scenes/bossman/states/wall_unstick.gd" id="13_nx3jo"]
[ext_resource type="Script" uid="uid://cas2261npxlrf" path="res://scenes/bossman/states/dash.gd" id="14_5akeu"]
[ext_resource type="PackedScene" uid="uid://4repmt5bkjt" path="res://scenes/common/projectile/shoot_module.tscn" id="17_nx3jo"]
[ext_resource type="PackedScene" uid="uid://cxpd1wjits3b5" path="res://scenes/summoned_sword/sumoned_sword.tscn" id="18_wb1nt"]
[ext_resource type="Script" uid="uid://c2alyerixs80x" path="res://scenes/bossman/player_input_module.gd" id="19_ws6jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kta3c"]
size = Vector2(28, 60)

[sub_resource type="Animation" id="Animation_e1tj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o4lkw"]
resource_name = "cast"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_go0v7"]
resource_name = "dab"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/unsit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_animation_finish"
}]
}

[sub_resource type="Animation" id="Animation_7mn2f"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_icu15"]
resource_name = "sat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7bpy"]
_data = {
&"RESET": SubResource("Animation_e1tj2"),
&"cast": SubResource("Animation_o4lkw"),
&"dab": SubResource("Animation_go0v7"),
&"idle": SubResource("Animation_7mn2f"),
&"sat": SubResource("Animation_icu15")
}

[node name="Bossman" type="CharacterBody2D"]
z_index = 10
floor_constant_speed = true
script = ExtResource("1_ynbah")

[node name="Sprite2D" type="Sprite2D" parent="." node_paths=PackedStringArray("entity")]
texture = ExtResource("1_7j0j7")
hframes = 5
script = ExtResource("3_8hjgk")
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 2)
shape = SubResource("RectangleShape2D_kta3c")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "managed_entity")]
script = ExtResource("4_lu0pf")
initial_state = NodePath("sat")
managed_entity = NodePath("..")

[node name="sat" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player", "shoot_module", "input_module")]
script = ExtResource("5_byj66")
animation_player = NodePath("../../AnimationPlayer")
shoot_module = NodePath("../../ShootModule")
input_module = NodePath("../../InputModule")

[node name="unsit" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player")]
script = ExtResource("6_vw84s")
animation_player = NodePath("../../AnimationPlayer")

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_buffer", "input_module")]
script = ExtResource("5_y5brg")
input_buffer = NodePath("../../InputBuffer")
input_module = NodePath("../../InputModule")

[node name="move" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_buffer", "input_module")]
script = ExtResource("6_ynbah")
input_buffer = NodePath("../../InputBuffer")
input_module = NodePath("../../InputModule")

[node name="dash" type="Node" parent="StateMachine"]
script = ExtResource("14_5akeu")

[node name="duration" type="Timer" parent="StateMachine/dash"]
wait_time = 0.5
one_shot = true

[node name="cooldown" type="Timer" parent="StateMachine/dash"]
wait_time = 0.1
one_shot = true

[node name="jump" type="Node" parent="StateMachine"]
script = ExtResource("8_640y7")

[node name="air" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_module", "input_buffer", "dash_state")]
script = ExtResource("9_bfm6t")
input_module = NodePath("../../InputModule")
input_buffer = NodePath("../../InputBuffer")
dash_state = NodePath("../dash")

[node name="air_stomp" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_module")]
script = ExtResource("10_1or6h")
input_module = NodePath("../../InputModule")

[node name="wall_jump" type="Node" parent="StateMachine"]
script = ExtResource("11_5akeu")

[node name="wall_slide" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_module")]
script = ExtResource("12_8hjgk")
input_module = NodePath("../../InputModule")

[node name="wall_unstick" type="Node" parent="StateMachine"]
script = ExtResource("13_nx3jo")

[node name="InputBuffer" type="Node" parent="."]
script = ExtResource("8_lu0pf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n7bpy")
}

[node name="ShootModule" parent="." instance=ExtResource("17_nx3jo")]
projectile_template = ExtResource("18_wb1nt")
collision_mask = 64

[node name="InputModule" type="Node" parent="."]
script = ExtResource("19_ws6jv")
